--- a/caixaeletronico/pom.xml
+++ b/caixaeletronico/pom.xml
@@ -1,13 +1,10 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>br.gov.serpro.curso</groupId>
-  <artifactId>carrinhocompras</artifactId>
+  <artifactId>caixaeletronico</artifactId>
   <version>0.0.1-SNAPSHOT</version>
-  <name>CarrinhoCompras</name>
-  <properties>
-  	<maven.compiler.target>1.8</maven.compiler.target>
-    <maven.compiler.source>1.8</maven.compiler.source>
-  </properties>
+  <name>Caixa Eletrônico</name>
+  
   <dependencies>
   	<dependency>
   		<groupId>junit</groupId>
