--- a/gameficacao/pom.xml
+++ b/gameficacao/pom.xml
@@ -6,6 +6,10 @@
 	<artifactId>gameficacao</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>Componente de Gameficação</name>
+	<properties>
+		<maven.compiler.target>1.8</maven.compiler.target>
+		<maven.compiler.source>1.8</maven.compiler.source>
+	</properties>
 	<dependencies>
 		<dependency>
 			<groupId>junit</groupId>
